掲載する項目を追加

--- a/src/index.haml
+++ b/src/index.haml
@@ -22,8 +22,28 @@
     .container
       .content
         .row
-          .span9
-          .span3
+          %img( src="" )
+        .row
+          .span12
+            %h2
+              About
+        .row
+          .span6
+            %h3
+              会場
+            未定
+            %h3
+              Date
+            2012/3/23(土)
+            %h3
+              Schedule
+            未定
+          .span6
+            %h3
+              Ragistration
+            未定
+            %h3
+              Coach
 
       %footer
         %span
