add About message by igaiga555

--- a/src/index.haml
+++ b/src/index.haml
@@ -22,11 +22,13 @@
     .container
       .content
         .row
-          %img( src="" )
+          %img( src="http://dummyimage.com/960x300/fff/C9531E&text=topimages" )
         .row
           .span12
             %h2
-              About
+              Rails寺子屋とは
+            %p
+              Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
         .row
           .span6
             %h3
