--- a/src/index.haml
+++ b/src/index.haml
@@ -6,6 +6,9 @@
     %title= "Rails寺子屋"
     %link(href="src/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet")
     %script(src="src/assets/bootstrap/js/bootstrap.min.js")
+    %script(src="src/assets/jquery-1.8.3.min.js")
+    %script(src="https://maps.google.com/maps/api/js?sensor=true")
+    %script(src="src/assets/gmaps.js")
     %link(href="style.css" rel="stylesheet")
 
   %body
@@ -27,23 +30,83 @@
           .span12
             %h2
               About
+            Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
         .row
           .span6
             %h3
               会場
             未定
+
+            -#%address
+              %strong Twitter, Inc.
+              %br
+              795 Folsom Ave, Suite 600
+              %br
+              San Francisco, CA 94107
+              %br
+              %abbr{:title => "Phone"} P:
+              (123) 456-7890
+
+            -# #map .
+
             %h3
               Date
             2012/3/23(土)
             %h3
               Schedule
             未定
+            -# %table.table.table-bordered.table-striped
+              %tbody
+                %tr
+                  %th
+                    Foo.
+                  %td
+                    Bar.
+
           .span6
             %h3
-              Ragistration
-            未定
+              Registration
+            %button.btn.btn-large.btn-primary.disabled{type: "button"} Register
+            %span.muted Registration is closed now.
+            %br/
+
+            %h3
+              FAQ
+            %h5 参加費はどのくらいかかりますか？
+            無料です。申し込むときにはわくわくした気持ちだけあればいいです。
+
+            %h5 当日までにやっておくと良いことはありますか？
+            特にありません。当日、忘れ物をしないようにして下さい！
+
+            %h5 プログラミングの経験があります。手伝うことはできますか？
+            Rails寺子屋は師範になれる人を捜しています。連絡先にてご連絡ください。
+
             %h3
               Coach
+            .row
+              .span3
+                %h4 五十嵐 邦明
+                %a{href: "https://twitter.com/igaiga555"} @igaiga555
+
+                %h4 大和田 純
+                %a{href: "https://twitter.com/june29"} @june29
+
+                %h4 佐々木 けいすけ
+                %a{href: "https://twitter.com/RooandQoo"} @RooandQoo
+
+                %h4 西嶋 悠貴
+                %a{href: "https://twitter.com/yuki24"} @yuki24
+
+              .span3
+                %h4 藤原 ゆうや
+                %a{href: "https://twitter.com/asonas"} @asonas
+
+                %h4 三浦 彩
+                %a{href: "https://twitter.com/mitaku"} @mitaku
+
+                %h4 村田 賢太
+                %a{href: "https://twitter.com/mrkn"} @mrkn
 
       %footer
         %span
+  %script(src="src/assets/app.js")
