書道APIで返ってきたロゴを切り出してトップページに表示させた

--- a/src/index.haml
+++ b/src/index.haml
@@ -25,7 +25,7 @@
     .container
       .content
         .row
-          %img( src="http://dummyimage.com/960x300/fff/C9531E&text=topimages" )
+          %img( src="src/assets/images/logo.jpg" )
         .row
           .span12
             %h2
