--- a/src/index.haml
+++ b/src/index.haml
@@ -10,6 +10,7 @@
     %script(src="https://maps.google.com/maps/api/js?sensor=true")
     %script(src="src/assets/gmaps.js")
     %link(href="style.css" rel="stylesheet")
+    %link(rel="shortcut icon" href="src/assets/images/favicon.ico")
 
   %body
     .navbar.navbar-fixed-top
