--- a/src/index.haml
+++ b/src/index.haml
@@ -5,10 +5,6 @@
     %meta(name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no")
     %title= "Rails寺子屋"
     %link(href="src/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet")
-    %script(src="src/assets/bootstrap/js/bootstrap.min.js")
-    %script(src="src/assets/jquery-1.8.3.min.js")
-    %script(src="https://maps.google.com/maps/api/js?sensor=true")
-    %script(src="src/assets/gmaps.js")
     %link(href="style.css" rel="stylesheet")
     %link(rel="shortcut icon" href="src/assets/images/favicon.ico")
 
@@ -111,4 +107,8 @@
 
       %footer
         %span
-  %script(src="src/assets/app.js")
+  %script(src="src/assets/jquery-1.8.3.min.js")
+  %script(src="src/assets/bootstrap/js/bootstrap.min.js")
+  -# %script(src="https://maps.google.com/maps/api/js?sensor=true")
+  -# %script(src="src/assets/gmaps.js")
+  -# %script(src="src/assets/app.js")
