replace english words to japanese

--- a/src/index.haml
+++ b/src/index.haml
@@ -48,10 +48,10 @@
             -# #map .
 
             %h3
-              Date
+              日時
             2012/3/23(土)
             %h3
-              Schedule
+              時間割
             未定
             -# %table.table.table-bordered.table-striped
               %tbody
@@ -63,13 +63,13 @@
 
           .span6
             %h3
-              Registration
+              参加登録
             %button.btn.btn-large.btn-primary.disabled{type: "button"} Register
             %span.muted Registration is closed now.
             %br/
 
             %h3
-              FAQ
+              よくある質問
             %h5 参加費はどのくらいかかりますか？
             無料です。申し込むときにはわくわくした気持ちだけあればいいです。
 
@@ -80,7 +80,7 @@
             Rails寺子屋は師範になれる人を捜しています。連絡先にてご連絡ください。
 
             %h3
-              Coach
+              師範
             .row
               .span3
                 %h4 五十嵐 邦明
