modify sentence of how to join coach staff

--- a/src/index.haml
+++ b/src/index.haml
@@ -77,7 +77,7 @@
             特にありません。当日、忘れ物をしないようにして下さい！
 
             %h5 プログラミングの経験があります。手伝うことはできますか？
-            Rails寺子屋は師範になれる人を捜しています。連絡先にてご連絡ください。
+            Rails寺子屋は師範になれる人を捜しています。いずれかの師範までご連絡ください。
 
             %h3
               師範
