--- a/src/index.haml
+++ b/src/index.haml
@@ -49,7 +49,7 @@
 
             %h3
               日時
-            2012/3/23(土)
+            2012/3/23(土) 10:00 開始予定
             %h3
               時間割
             未定
