add  x kosenconf  and adjust informations

--- a/src/index.haml
+++ b/src/index.haml
@@ -32,8 +32,15 @@
         .row
           .span6
             %h3
+              Rails寺子屋 x 高専カンファレンス
+
+            %h3
+              日時
+            2012/3/23(土) 10:00 開始予定
+
+            %h3
               会場
-            未定
+            未定(東京近郊)
 
             -#%address
               %strong Twitter, Inc.
@@ -48,9 +55,6 @@
             -# #map .
 
             %h3
-              日時
-            2012/3/23(土) 10:00 開始予定
-            %h3
               時間割
             未定
             -# %table.table.table-bordered.table-striped
@@ -60,6 +64,10 @@
                     Foo.
                   %td
                     Bar.
+
+            %h3
+              参加対象者
+            高専学生、卒業生、教職員
 
           .span6
             %h3
