Add credit of '書道API'

--- a/src/index.haml
+++ b/src/index.haml
@@ -112,6 +112,13 @@
                 %h4 村田 賢太
                 %a{href: "https://twitter.com/mrkn"} @mrkn
 
+            %h3
+              題字
+            .row
+              .span3
+                %h4 さいとう かずよし
+                %a{href: "https://twitter.com/kazuyoshi"} @kazuyoshi
+
       %footer
         %span
   %script(src="src/assets/jquery-1.8.3.min.js")
