Adjust TERAKOYA taste

--- a/src/index.haml
+++ b/src/index.haml
@@ -71,8 +71,8 @@
           .span6
             %h3
               参加登録
-            %button.btn.btn-large.btn-primary.disabled{type: "button"} Register
-            %span.muted Registration is closed now.
+            %button.btn.btn-large.btn-primary.disabled{type: "button"} 門を叩く
+            %span.muted (準備中)
             %br/
 
             %h3
