Add OGP information

--- a/src/index.haml
+++ b/src/index.haml
@@ -6,6 +6,12 @@
     %title= "Rails寺子屋"
     %link(href="src/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet")
     %link(href="style.css" rel="stylesheet")
+    %meta(property="og:type"        content="website" )
+    %meta(property="og:url"         content="http://rails.terakoya.io/" )
+    %meta(property="og:title"       content="Rails寺子屋" )
+    %meta(property="og:site_name"   content="Rails寺子屋"  )
+    %meta(property="og:description" content="Rails寺子屋はWebアプリを作るための強力なツール&quot;Ruby on Rails&quot;を使ってWebアプリ作りを実践しながら学ぶイベントです。"  )
+    %meta(property="og:image"       content="http://rails.terakoya.io/src/assets/images/ogp_logo.png"  )
 
   %body
     .navbar.navbar-fixed-top
