Convert ひらがな to 漢字

--- a/src/index.haml
+++ b/src/index.haml
@@ -102,14 +102,14 @@
                 %h4 大和田 純
                 %a{href: "https://twitter.com/june29"} @june29
 
-                %h4 佐々木 けいすけ
+                %h4 佐々木 佳祐
                 %a{href: "https://twitter.com/RooandQoo"} @RooandQoo
 
                 %h4 西嶋 悠貴
                 %a{href: "https://twitter.com/yuki24"} @yuki24
 
               .span3
-                %h4 藤原 ゆうや
+                %h4 藤原 裕也
                 %a{href: "https://twitter.com/asonas"} @asonas
 
                 %h4 三浦 彩
