--- a/src/index.haml
+++ b/src/index.haml
@@ -2,7 +2,7 @@
 %html(lang="ja")
   %head
     %meta(charset="utf-8")
-    %meta(name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no")
+    %meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes")
     %title= "Rails寺子屋"
     %link(href="src/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet")
     %link(href="style.css" rel="stylesheet")
