--- a/src/index.haml
+++ b/src/index.haml
@@ -4,7 +4,8 @@
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes")
     %title= "Rails寺子屋"
-    %link(href="src/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet")
+    %link(href="src/assets/bootstrap/css/bootstrap.css" rel="stylesheet")
+    %link(href="src/assets/fontawesome/css/font-awesome.css" rel="stylesheet")
     %link(href="style.css" rel="stylesheet")
     %meta(property="og:type"        content="website" )
     %meta(property="og:url"         content="http://rails.terakoya.io/" )
