--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 body {
-  padding: 60px 0;
+  padding: 30px 0;
   margin: 15px;
 }
 
@@ -9,6 +9,118 @@ h3 {
 
 p {
   margin-bottom: 20px;
+}
+
+.about {
+  margin-bottom: 20px;
+
+  .left-box {
+    width: 49%;
+    margin-right: 20px;
+    float: left;
+  }
+
+  .time-table {
+    .table {
+      width: 45%;
+      max-width: none;
+    }
+  }
+}
+
+.courses {
+  margin-bottom: 20px;
+
+  .course {
+    width: 30%;
+    margin-right: 20px;
+    float: left;
+  }
+}
+
+.masters {
+  padding: 10px;
+
+  .master,
+  .calligrapher {
+    position: relative;
+    width: 46%;
+    min-height: 170px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    float: left;
+
+    .name {
+      font-weight: bold;
+    }
+
+    .icon {
+      position: absolute;
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+
+      li {
+        float: left;
+
+        .link {
+          i {
+            font-size: 120%;
+          }
+        }
+      }
+    }
+
+    .description {
+      font-size: 80%;
+    }
+
+    ul,
+    .name,
+    .description {
+      padding-left: 90px;
+    }
+  }
+
+  .last {
+    min-height: 100px;
+  }
+}
+.calligrapher {
+  position: relative;
+  min-height: 100px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+
+  .name {
+    font-weight: bold;
+  }
+
+  .icon {
+    position: absolute;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+
+    li {
+      float: left;
+
+      .link {
+        i {
+          font-size: 120%;
+        }
+      }
+    }
+  }
+
+  ul,
+  .name {
+    padding-left: 90px;
+  }
 }
 
 #map {
