Unify profile format

--- a/src/index.haml
+++ b/src/index.haml
@@ -167,7 +167,7 @@
                 %a( href="http://github.com/mitaku" class="link" )
                   %i.icon-github
             .description
-              株式会社オプティムのRailsエバンジェリスト。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く
+              株式会社オプティムのRailsエバンジェリスト。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
 
           .master.last
             .icon
