Place is around Tokyo

--- a/src/index.haml
+++ b/src/index.haml
@@ -39,7 +39,7 @@
             %h3
               会場
             %p
-              未定
+              未定(東京近郊)
           .right-box.clearfix
             %h3
               参加登録
