--- a/src/index.haml
+++ b/src/index.haml
@@ -15,11 +15,13 @@
     %meta(property="og:image"       content="http://rails.terakoya.io/src/assets/images/ogp_logo.png"  )
 
   %body
+    %header
+      .container
+        %h1.logo
+        %img( src="src/assets/images/logo.png" )
+
     .container
       .content
-        %h1
-          %img( src="src/assets/images/logo.jpg" )
-
         %h2
           Rails寺子屋 x Kosenconfについて
         .about.clearfix
@@ -28,25 +30,25 @@
           %p
             Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
           .left-box
-            %h3
+            %h4
               日時
             %p
               2013/3/23(土) 10:00 開始予定
-            %h3
+            %h4
               参加対象者
             %p
               高専学生 卒業生 教職員
-            %h3
+            %h4
               会場
             %p
               未定(東京近郊)
           .right-box.clearfix
-            %h3
+            %h4
               参加登録
             %p
-              %button.btn.btn-large.btn-primary.disabled{type: "button"} 門を叩く
-              %span.muted (準備中)
-            %h3
+              %a( href="https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ" )
+                %button.btn.btn-large.btn-primary{type: "button"} 門を叩く
+            %h4
               時間割
             .time-table
               未定（午前10時頃から夕方まで、その後は懇親会の予定で検討中です。）
@@ -62,16 +64,19 @@
         .courses.clearfix
           .course
             %h3
+              %img( src="src/assets/images/tsubomi.png" class="shadow tsubomi" )
               蕾組
             %description
               Rails未経験者向けのコースです。Rubyやその他の言語でのプログラミング経験は問いません。Railsでかんたんなアプリを作ります。
           .course
             %h3
+              %img( src="src/assets/images/hana.png" class="shadow hana" )
               華組
             %description
               Rails経験者向けのコースです。Rails の技量を高めたい方のコースです。コーチと一緒に課題となるRailsアプリを考え、作ります。
           .course
             %h3
+              %img( src="src/assets/images/hikari.png" class="shadow hikari" )
               光組
             %description
               教職員向けのコースです。内容は蕾組と同程度を予定しています。
@@ -81,7 +86,7 @@
         .masters.clearfix
           .master
             .icon
-              %img( src="https://si0.twimg.com/profile_images/2775085674/aacc6da0f43115bb2e60878e10a92377.jpeg" width="75" )
+              %img( src="https://si0.twimg.com/profile_images/2775085674/aacc6da0f43115bb2e60878e10a92377.jpeg" width="75" class="shadow" )
             .name
               五十嵐 邦明 @igaiga555
             %ul.clearfix
@@ -91,36 +96,55 @@
               %li
                 %a( href="http://facebook.com/kuniaki.igarashi" class="link" )
                   %i.icon-facebook
+              %li
+                %a( href="http://github.com/igaiga" class="link" )
+                  %i.icon-github
+
             .description
               株式会社万葉のrailsエンジニア。群馬高専卒業。一橋大学非常勤講師(ruby, rails)。著書に「スタートアップruby」。tokyu.rb, asakusa.rb所属。高専カンファレンス014東京実行委員長。em高専カンファレンスvol.1編集長。
 
           .master
             .icon
-              %img( src="https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg" width="75" )
+              %img( src="https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg" width="75" class="shadow" )
             .name
               村田 賢太 @mrkn
             %ul.clearfix
               %li
                 %a( href="http://twitter.com/mrkn" class="link" )
                   %i.icon-twitter
+              %li
+                %a( href="http://facebook.com/mrkn720" class="link" )
+                  %i.icon-facebook
+              %li
+                %a( href="http://github.com/mrkn" class="link" )
+                  %i.icon-github
             .description
               苫小牧高専情報工学科および旭川高専専攻科生産システム工学専攻を卒業後、北海道大学大学院情報科学研究科にて複雑ネットワークと同期現象の研究に従事し、2009年に学位を取得。その後札幌市内の医療系ベンチャー企業に就職し、システムエンジニアとして日々を過ごす。2010年2月、CRuby のコミッタに就任。2011年12月、クックパッド株式会社へ転職。現在、クックパッドの開発基盤エンジニアとして、毎日の料理を楽しくし心からの笑顔を世界中に広げるために働いている。
 
           .master
             .icon
-              %img( src="https://si0.twimg.com/profile_images/2942332207/dd1501287df208056e6edb8b1514b84a.jpeg" width="75" )
+              %img( src="https://si0.twimg.com/profile_images/2942332207/dd1501287df208056e6edb8b1514b84a.jpeg" width="75" class="shadow" )
             .name
               大和田 純 @june29
             %ul.clearfix
               %li
                 %a( href="http://twitter.com/june29" class="link" )
                   %i.icon-twitter
+              %li
+                %a( href="http://facebook.com/june29.jp" class="link" )
+                  %i.icon-facebook
+              %li
+                %a( href="http://github.com/june29" class="link" )
+                  %i.icon-github
+              %li
+                %a( href="http://june29.jp" class="link" )
+                  %i.icon-home
             .description
               釧路高専情報工学科卒業。北海道生まれ少年漫画育ちのWebアプリケーション開発者。Ruby札幌に出会ってからは、日常の中で愛用する手になじむ道具としてRubyを選び続けている。「RubyKaigi」や「高専カンファレンス」の運営に関わったり、雑誌「WEB+DB PRESS」の連載をしたりと、源氏名「june29」で活動中。尊敬する人物は荒木飛呂彦先生。
 
           .master
             .icon
-              %img( src="https://si0.twimg.com/profile_images/1465459377/5494314_707716410.jpg" width="75" )
+              %img( src="https://si0.twimg.com/profile_images/1465459377/5494314_707716410.jpg" width="75" class="shadow" )
             .name
               西嶋 悠貴 @yuki24
             %ul.clearfix
@@ -138,7 +162,7 @@
 
           .master
             .icon
-              %img( src="https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png" width="75" )
+              %img( src="https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png" width="75" class="shadow" )
             .name
               佐々木 佳祐 @RooandQoo
             %ul.clearfix
@@ -156,13 +180,16 @@
 
           .master
             .icon
-              %img( src="https://si0.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg" width="75" )
+              %img( src="https://si0.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg" width="75" class="shadow" )
             .name
               三浦 彩 @mitaku
             %ul.clearfix
               %li
                 %a( href="http://twitter.com/mitaku" class="link" )
                   %i.icon-twitter
+              %li
+                %a( href="http://facebook.com/takumi.miura.9" class="link" )
+                  %i.icon-facebook
               %li
                 %a( href="http://github.com/mitaku" class="link" )
                   %i.icon-github
@@ -171,7 +198,7 @@
 
           .master.last
             .icon
-              %img( src="https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png" width="75" )
+              %img( src="https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png" width="75" class="shadow" )
             .name
               藤原 裕也 @asonas
             %ul.clearfix
@@ -184,31 +211,53 @@
               %li
                 %a( href="http://github.com/asonas" class="link" )
                   %i.icon-github
+              %li
+                %a( href="http://asonas.jp" class="link" )
+                  %i.icon-home
             .description
               津山工業高等専門学校 電気電子工学科を修了後、武蔵野美術大学の通信学部に通いデザインを学ぶ。2010年に京都で行われた高専カンファレンスに感化され、今はスタートアップ系Web男子として日々を邁進。高専カンファレンスやTech系勉強会などによく出現する。
 
-        %h3
-          題字
-        .calligrapher
-          .icon
-            %img( src="https://si0.twimg.com/profile_images/1720785107/my_bigger.png" width="75" )
-          .name
-            さいとうかずよし
-          %ul.clearfix
-            %li
-              %a( href="http://twitter.com/kazuyoshi" class="link" )
-                %i.icon-twitter
+        %h2
+          助っ人
+        .collaborators.clearfix
+          .calligrapher
+            %span.role
+              題字
+            .icon
+              %img( src="https://si0.twimg.com/profile_images/1720785107/my_bigger.png" width="75" class="shadow" )
+            .name
+              さいとうかずよし
+            %ul.clearfix
+              %li
+                %a( href="http://twitter.com/kazuyoshi" class="link" )
+                  %i.icon-twitter
+          .designer
+            %span.role
+              絵師
+            .icon
+              %img( src="http://a0.twimg.com/profile_images/3049823344/b89478d5d99dbaee208000b505c5677c.png" width="75" class="shadow" )
+            .name
+              あらなぎ
+            %ul.clearfix
+              %li
+                %a( href="http://twitter.com/aranagi" class="link" )
+                  %i.icon-twitter
 
-        %h3
+        %h2
           よくある質問
-        %h4 参加費はどのくらいかかりますか？
-        無料です。申し込むときにはわくわくした気持ちだけあればいいです。
-
-        %h4 当日までにやっておくと良いことはありますか？
-        特にありません。当日、忘れ物をしないようにして下さい！
-
-        %h4 プログラミングの経験があります。手伝うことはできますか？
-        Rails寺子屋は師範になれる人を捜しています。いずれかの師範までご連絡ください。
+        .faqs
+          .question
+            Q. 参加費はどのくらいかかりますか？
+          .answer
+            A. 無料です。申し込むときにはわくわくした気持ちだけあればいいです。
+          .question
+            Q. 当日までにやっておくと良いことはありますか？
+          .answer
+            A. 特にありません。当日、忘れ物をしないようにして下さい！
+          .question
+            Q. プログラミングの経験があります。手伝うことはできますか？
+          .answer
+            A. Rails寺子屋は師範になれる人を捜しています。いずれかの師範までご連絡ください。
 
       %footer
         %span
