--- a/style.css
+++ b/style.css
@@ -1,6 +1,25 @@
 body {
-  padding: 30px 0;
+  padding: 30px 0; }
+
+body.container {
   margin: 15px; }
+
+header {
+  margin-bottom: 20px;
+  background-image: url("src/assets/images/header.png");
+  height: 300px;
+  box-shadow: 0px 5px 15px 0px rgba(100, 100, 100, 0.4); }
+
+footer {
+  background-image: url("src/assets/images/footer.png");
+  background-repeat: no-repeat;
+  height: 470px; }
+
+h2 {
+  background-image: url("src/assets/images/headline.png");
+  background-repeat: no-repeat;
+  color: #333;
+  padding: 3px 5px; }
 
 h3 {
   margin-top: 20px; }
@@ -8,25 +27,46 @@ h3 {
 p {
   margin-bottom: 20px; }
 
-.about {
-  margin-bottom: 20px; }
-  .about .left-box {
-    width: 49%;
-    margin-right: 20px;
-    float: left; }
-  .about .time-table .table {
-    width: 45%;
-    max-width: none; }
+.shadow {
+  box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.4); }
 
-.courses {
-  margin-bottom: 20px; }
-  .courses .course {
-    width: 30%;
-    margin-right: 20px;
-    float: left; }
+.about,
+.courses,
+.masters,
+.collaborators,
+.faqs {
+  padding: 20px;
+  background-image: url("src/assets/images/background.png");
+  margin-bottom: 30px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px; }
+
+.about .left-box {
+  width: 49%;
+  margin-right: 20px;
+  float: left; }
+.about .time-table .table {
+  width: 45%;
+  max-width: none; }
+
+.courses .course {
+  width: 30%;
+  margin-right: 20px;
+  float: left; }
+  .courses .course h3 {
+    position: relative;
+    padding-left: 70px;
+    background-repeat: no-repeat;
+    min-height: 70px;
+    vertical-align: middle;
+    line-height: 2.3em; }
+    .courses .course h3 img {
+      position: absolute;
+      left: 0; }
 
 .masters {
-  padding: 10px; }
+  padding: 20px; }
   .masters .master,
   .masters .calligrapher {
     position: relative;
@@ -64,25 +104,50 @@ p {
   .masters .last {
     min-height: 100px; }
 
-.calligrapher {
+.collaborators .calligrapher,
+.collaborators .designer {
+  float: left;
+  width: 45%;
   position: relative;
   min-height: 100px;
   margin-right: 20px;
   margin-bottom: 10px; }
-  .calligrapher .name {
+  .collaborators .calligrapher .role,
+  .collaborators .designer .role {
+    font-weight: bold;
+    font-size: 150%; }
+  .collaborators .calligrapher .name,
+  .collaborators .designer .name {
     font-weight: bold; }
-  .calligrapher .icon {
+  .collaborators .calligrapher .icon,
+  .collaborators .designer .icon {
     position: absolute; }
-  .calligrapher ul {
+  .collaborators .calligrapher ul,
+  .collaborators .designer ul {
     list-style: none;
     margin: 0; }
-    .calligrapher ul li {
+    .collaborators .calligrapher ul li,
+    .collaborators .designer ul li {
       float: left; }
-      .calligrapher ul li .link i {
+      .collaborators .calligrapher ul li .link i,
+      .collaborators .designer ul li .link i {
         font-size: 120%; }
-  .calligrapher ul,
-  .calligrapher .name {
+  .collaborators .calligrapher ul,
+  .collaborators .calligrapher .name,
+  .collaborators .designer ul,
+  .collaborators .designer .name {
     padding-left: 90px; }
+
+.calligrapher {
+  float: left; }
+
+.faqs .question {
+  font-weight: bold;
+  font-size: 150%;
+  margin-bottom: 10px; }
+.faqs .answer {
+  font-size: 110%;
+  margin-bottom: 15px; }
 
 #map {
   height: 300px; }
