--- a/src/index.haml
+++ b/src/index.haml
@@ -29,6 +29,11 @@
             趣意書
           %p
             Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
+            %br
+            本イベントはRails寺子屋と
+            %a( href="http://kosenconf.jp/" )
+              高専カンファレンス
+            の合同イベントです。
           .left-box
             %h4
               日時
