--- a/src/index.haml
+++ b/src/index.haml
@@ -46,20 +46,22 @@
             %h4
               会場
             #venue
-              %a(href="http://www.optim.co.jp/")
-                %strong 株式会社オプティム
-              %a(href="http://www.optim.co.jp/access") (アクセス)
-              %br
-              %span.address 東京都港区港南1丁目6−34 品川イースト1階 (受付)
-              %br
-              %span 最寄り駅: JR品川駅
+              %address
+                %a(href="http://www.optim.co.jp/")
+                  %strong 株式会社オプティム
+                %a(href="http://www.optim.co.jp/access") (アクセス)
+                %br
+                %span.address 東京都港区港南1丁目6−34 品川イースト1階 (受付)
+                %br
+                %span 最寄り駅: JR品川駅
             #map
           .right-box.clearfix
             %h4
               参加登録
             %p
-              %a( href="https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ" )
-                %button.btn.btn-large.btn-primary{type: "button"} 門を叩く
+              %a.btn.btn-large.btn-primary( href="https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ" ) 門を叩く
+              %br
+              %span.deadline.label.label-important 応募締め切り: 2013/1/31(木) 23:59
             %h4
               時間割
             .time-table
