Modify css (limit date)

--- a/src/index.haml
+++ b/src/index.haml
@@ -60,8 +60,7 @@
               参加登録
             %p
               %a.btn.btn-large.btn-primary( href="https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ" ) 門を叩く
-              %br
-              %span.deadline.label.label-important 応募締め切り: 2013/1/31(木) 23:59
+              .deadline 応募締め切り: 2013/1/31(木) 23:59
             %h4
               時間割
             .time-table
