--- a/src/style.scss
+++ b/src/style.scss
@@ -210,8 +210,8 @@ p {
   height: 300px;
 }
 
-span.deadline {
-  font-size: 17.5px;
-  padding: 11px 19px;
-  margin-top: 1px;
+.deadline {
+  font-size: 18px;
+  margin: 5px 0;
+  color: #B94A48;
 }
