--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ p {
 #map {
   height: 300px; }
 
-span.deadline {
-  font-size: 17.5px;
-  padding: 11px 19px;
-  margin-top: 1px; }
+.deadline {
+  font-size: 18px;
+  margin: 5px 0;
+  color: #B94A48; }
