--- a/src/index.haml
+++ b/src/index.haml
@@ -59,8 +59,7 @@
             %h4
               参加登録
             %p
-              %a.btn.btn-large.btn-primary( href="https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ" ) 門を叩く
-              .deadline 応募締め切り: 2013/1/31(木) 23:59
+              %span 参加応募は〆切ました。予定数を上回る参加応募をいただきました。選考を行いまして、結果を2/23までにご連絡いたします。
             %h4
               時間割
             .time-table
