--- a/src/style.scss
+++ b/src/style.scss
@@ -34,6 +34,11 @@ p {
   margin-bottom: 20px;
 }
 
+
+tr:nth-child(odd) td {
+background-color: rgba(255, 255, 255, 0.5) !important;
+}
+
 .shadow {
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.4);
 }
