--- a/src/index.haml
+++ b/src/index.haml
@@ -38,7 +38,7 @@
             %h4
               日時
             %p
-              2013/3/23(土) 10:00 開始予定
+              2013/3/23(土) 10:00 開始(9:30分開場)
             %h4
               参加対象者
             %p
@@ -51,6 +51,8 @@
                   %strong 株式会社オプティム
                 %a(href="http://www.optim.co.jp/access") (アクセス)
                 %br
+                %a(href="http://g.co/maps/t382x") 大きな地図で見る
+                %br
                 %span.address 東京都港区港南1丁目6−34 品川イースト1階 (受付)
                 %br
                 %span 最寄り駅: JR品川駅
@@ -61,16 +63,46 @@
             %p
               %span 参加応募は〆切ました。予定数を上回る参加応募をいただきました。選考を行いまして、結果を2/23までにご連絡いたします。
             %h4
+              当日の持ち物
+            .equipment
+              %p
+                お弁当とPCを持参してください。
+                %br
+                詳しくは2月17日に送りましたメールを御覧ください。
+            %h4
               時間割
             .time-table
-              未定（午前10時頃から夕方まで、その後は懇親会の予定で検討中です。）
-              /%table.table.table-striped
-              /  %tr
-              /    %td
-              /      10:00
-              /    %td
-              /      開始
-
+              %table.table.table-striped
+                %tr
+                  %td
+                    9:30
+                  %td
+                    開場
+                %tr
+                  %td
+                    10:00 - 12:00
+                  %td
+                    環境構築
+                %tr
+                  %td
+                    12:00 - 13:00
+                  %td
+                    ランチ
+                %tr
+                  %td
+                    13:00 - 17:00
+                  %td
+                    ワークショップ
+                %tr
+                  %td
+                    17:00 - 19:00
+                  %td
+                    懇親会
+                %tr
+                  %td
+                    19:00
+                  %td
+                    解散
         %h2
           コースについて
         .courses.clearfix
