--- a/src/index.haml
+++ b/src/index.haml
@@ -240,7 +240,7 @@
             .description
               株式会社オプティムのRailsエバンジェリスト。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
 
-          .master.last
+          .master
             .icon
               %img( src="https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png" width="75" class="shadow" )
             .name
@@ -260,6 +260,39 @@
                   %i.icon-home
             .description
               津山工業高等専門学校 電気電子工学科を修了後、武蔵野美術大学の通信学部に通いデザインを学ぶ。2010年に京都で行われた高専カンファレンスに感化され、今はスタートアップ系Web男子として日々を邁進。高専カンファレンスやTech系勉強会などによく出現する。
+
+          .master
+            .icon
+              %img( src="https://twimg0-a.akamaihd.net/profile_images/3022880518/d4a92c61fdb0ee77fb6d29ed644581b7_bigger.png" width="75" class="shadow" )
+            .name
+              そらは @sora_h
+            %ul.clearfix
+              %li
+                %a( href="http://twitter.com/sora_h" class="link" )
+                  %i.icon-twitter
+              %li
+                %a( href="http://github.com/sorah" class="link" )
+                  %i.icon-github
+              %li
+                %a( href="http://sorah.jp" class="link" )
+                  %i.icon-home
+            .description
+              クックパッドで開発基盤エンジニアをしている中卒 Rubyist, Ruby コミッタ。こわくないです。
+
+          .master.last
+            .icon
+              %img( src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/c170.50.621.621/s200x200/602757_389226921172381_1750948442_n.jpg" width="75" class="shadow" )
+            .name
+              本多 展幸 @nobuyuki
+            %ul.clearfix
+              %li
+                %a( href="https://twitter.com/nobyuki" class="link" )
+                  %i.icon-twitter
+              %li
+                %a( href="https://www.facebook.com/nobyuki.h" class="link" )
+                  %i.icon-facebook
+            .description
+              株式会社ネットワーク応用通信研究所のRailsエンジニア。生粋の福岡県人だったが、Rubyで仕事がしたくて松江にIターン。趣味は釣りと料理と積読。ちなみに、高専卒ではない。
 
         %h2
           助っ人
