Add nobyuki's github account

--- a/src/index.haml
+++ b/src/index.haml
@@ -289,6 +289,9 @@
                 %a( href="https://twitter.com/nobyuki" class="link" )
                   %i.icon-twitter
               %li
+                %a( href="http://github.com/nobyuki" class="link" )
+                  %i.icon-github
+              %li
                 %a( href="https://www.facebook.com/nobyuki.h" class="link" )
                   %i.icon-facebook
             .description
