--- a/src/index.haml
+++ b/src/index.haml
@@ -283,7 +283,7 @@
             .icon
               %img( src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/c170.50.621.621/s200x200/602757_389226921172381_1750948442_n.jpg" width="75" class="shadow" )
             .name
-              本多 展幸 @nobuyuki
+              本多 展幸 @nobyuki
             %ul.clearfix
               %li
                 %a( href="https://twitter.com/nobyuki" class="link" )
