--- a/src/index.haml
+++ b/src/index.haml
@@ -279,7 +279,7 @@
             .description
               クックパッドで開発基盤エンジニアをしている中卒 Rubyist, Ruby コミッタ。こわくないです。
 
-          .master.last
+          .master
             .icon
               %img( src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/c170.50.621.621/s200x200/602757_389226921172381_1750948442_n.jpg" width="75" class="shadow" )
             .name
@@ -297,6 +297,27 @@
             .description
               株式会社ネットワーク応用通信研究所のRailsエンジニア。生粋の福岡県人だったが、Rubyで仕事がしたくて松江にIターン。趣味は釣りと料理と積読。ちなみに、高専卒ではない。
 
+          .master.last
+            .icon
+              %img( src="https://twimg0-a.akamaihd.net/profile_images/3064291628/70f869b4ea94a85744370d1f378ea1e8_bigger.png" width="75" class="shadow" )
+            .name
+              青山 昂平 @_a__san
+            %ul.clearfix
+              %li
+                %a( href="http://twitter.com/_a__san" class="link" )
+                  %i.icon-twitter
+              %li
+                %a( href="https://www.facebook.com/aoyama.kohei" class="link" )
+                  %i.icon-facebook
+              %li
+                %a( href="http://github.com/akoruka" class="link" )
+                  %i.icon-github
+            .description
+              福井工業高等専門学校 電子情報工学科を飛び出してそのまま上京してきたプログラマーっぽい人
+              %br
+              自称ゆるふわガチ勢
+              %br
+              こわい人こわいです
         %h2
           助っ人
         .collaborators.clearfix
