Add profile (@mirakui)

--- a/src/index.haml
+++ b/src/index.haml
@@ -297,7 +297,7 @@
             .description
               株式会社ネットワーク応用通信研究所のRailsエンジニア。生粋の福岡県人だったが、Rubyで仕事がしたくて松江にIターン。趣味は釣りと料理と積読。ちなみに、高専卒ではない。
 
-          .master.last
+          .master
             .icon
               %img( src="https://twimg0-a.akamaihd.net/profile_images/3064291628/70f869b4ea94a85744370d1f378ea1e8_bigger.png" width="75" class="shadow" )
             .name
@@ -318,6 +318,25 @@
               自称ゆるふわガチ勢
               %br
               こわい人こわいです
+
+          .master.last
+            .icon
+              %img( src="https://twimg0-a.akamaihd.net/profile_images/1296753997/image.jpg" width="75" class="shadow" )
+            .name
+              成田 一生 @mirakui
+            %ul.clearfix
+              %li
+                %a( href="http://twitter.com/mirakui" class="link" )
+                  %i.icon-twitter
+              %li
+                %a( href="https://www.facebook.com/mirakui" class="link" )
+                  %i.icon-facebook
+              %li
+                %a( href="http://github.com/mirakui" class="link" )
+                  %i.icon-github
+            .description
+              クックパッドで働くインフラエンジニア。主に Rails アプリケーションのパフォーマンス改善を担当。技術評論社 WEB+DB PRESS Vol.70に「Rails高速化特集」を書きました。出身高専は豊田高専情報工学科。好きな動物はパンダ。
+
         %h2
           助っ人
         .collaborators.clearfix
