--- a/src/index.haml
+++ b/src/index.haml
@@ -319,7 +319,7 @@
               %br
               こわい人こわいです
 
-          .master.last
+          .master
             .icon
               %img( src="https://twimg0-a.akamaihd.net/profile_images/1296753997/image.jpg" width="75" class="shadow" )
             .name
@@ -336,6 +336,18 @@
                   %i.icon-github
             .description
               クックパッドで働くインフラエンジニア。主に Rails アプリケーションのパフォーマンス改善を担当。技術評論社 WEB+DB PRESS Vol.70に「Rails高速化特集」を書きました。出身高専は豊田高専情報工学科。好きな動物はパンダ。
+
+          .master.last
+            .icon
+              %img( src="https://si0.twimg.com/profile_images/1491871238/kengo05_bigger.png" width="75" class="shadow" )
+            .name
+              濱崎 健吾 @hmsk
+            %ul.clearfix
+              %li
+                %a( href="http://twitter.com/hmsk" class="link" )
+                  %i.icon-twitter
+            .description
+              北九州高専制御情報工学科卒業。五十嵐さんが講師の講義のティーチングアシスタント。
 
         %h2
           助っ人
