--- a/src/index.haml
+++ b/src/index.haml
@@ -4,8 +4,8 @@
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes")
     %title= "Rails寺子屋"
-    %link(href="src/assets/bootstrap/css/bootstrap.css" rel="stylesheet")
-    %link(href="src/assets/fontawesome/css/font-awesome.css" rel="stylesheet")
+    %link(href="/src/assets/bootstrap/css/bootstrap.css" rel="stylesheet")
+    %link(href="/src/assets/fontawesome/css/font-awesome.css" rel="stylesheet")
     %link(href="style.css" rel="stylesheet")
     %meta(property="og:type"        content="website" )
     %meta(property="og:url"         content="http://rails.terakoya.io/" )
@@ -18,7 +18,7 @@
     %header
       .container
         %h1.logo
-        %img( src="src/assets/images/logo.png" )
+        %img( src="/src/assets/images/logo.png" )
 
     .container
       .content
@@ -37,8 +37,8 @@
           .left-box
             %h4
               日時
-            %p
-              2013/3/23(土) 10:00 開始 (9:30分開場)
+            %strong
+              2013/8/3(土)
             %h4
               参加対象者
             %p
@@ -47,83 +47,61 @@
               会場
             #venue
               %address
-                %a(href="http://www.optim.co.jp/")
-                  %strong 株式会社オプティム
-                %a(href="http://www.optim.co.jp/access") (アクセス)
+                %a(href="http://www.pixiv.co.jp/")
+                  %strong ピクシブ株式会社
+                %a(href="http://www.pixiv.co.jp/company/") (アクセス)
                 %br
-                %a(href="http://g.co/maps/t382x") 大きな地図で見る
+                %a(href="http://goo.gl/maps/gn3xd") 大きな地図で見る
                 %br
-                %span.address 東京都港区港南1丁目6−34 品川イースト1階 (受付)
+                %span.address 東京都渋谷区千駄ヶ谷4-23-5 JPR千駄ヶ谷ビル5F
                 %br
-                %span 最寄り駅: JR品川駅
+                %span 最寄り駅: JR千駄ヶ谷駅
             #map
           .right-box.clearfix
             %h4
               参加登録
             %p
-              %span 参加応募は〆切ました。予定数を上回る参加応募をいただきました。選考を行いまして、結果を2/23までにご連絡いたします。
+              %span 後日連絡します。
             %h4
               当日の持ち物
             .equipment
               %p
-                お弁当とPCを持参してください。
-                %br
-                詳しくは2月17日に送りましたメールを御覧ください。
+                後日連絡します。
             %h4
               時間割
             .time-table
-              %table.table.table-striped
-                %tr
-                  %td
-                    9:30
-                  %td
-                    開場
-                %tr
-                  %td
-                    10:00 - 12:00
-                  %td
-                    環境構築
-                %tr
-                  %td
-                    12:00 - 13:00
-                  %td
-                    ランチ
-                %tr
-                  %td
-                    13:00 - 17:00
-                  %td
-                    ワークショップ
-                %tr
-                  %td
-                    17:00 - 19:00
-                  %td
-                    懇親会
-                %tr
-                  %td
-                    19:00
-                  %td
-                    解散
-        %h2
-          コースについて
-        .courses.clearfix
-          .course
-            %h3
-              %img( src="src/assets/images/tsubomi.png" class="shadow tsubomi" )
-              蕾組
-            %description
-              Rails未経験者向けのコースです。Rubyやその他の言語でのプログラミング経験は問いません。Railsでかんたんなアプリを作ります。
-          .course
-            %h3
-              %img( src="src/assets/images/hana.png" class="shadow hana" )
-              華組
-            %description
-              Rails経験者向けのコースです。Rails の技量を高めたい方のコースです。コーチと一緒に課題となるRailsアプリを考え、作ります。
-          .course
-            %h3
-              %img( src="src/assets/images/hikari.png" class="shadow hikari" )
-              光組
-            %description
-              教職員向けのコースです。内容は蕾組と同程度を予定しています。
+              後日連絡します。
+              /%table.table.table-striped
+              /  %tr
+              /    %td
+              /      9:30
+              /    %td
+              /      開場
+              /  %tr
+              /    %td
+              /      10:00 - 12:00
+              /    %td
+              /      環境構築
+              /  %tr
+              /    %td
+              /      12:00 - 13:00
+              /    %td
+              /      ランチ
+              /  %tr
+              /    %td
+              /      13:00 - 17:00
+              /    %td
+              /      ワークショップ
+              /  %tr
+              /    %td
+              /      17:00 - 19:00
+              /    %td
+              /      懇親会
+              /  %tr
+              /    %td
+              /      19:00
+              /    %td
+              /      解散
 
         %h2
           師範(コーチ)
@@ -393,8 +371,8 @@
 
       %footer
         %span
-  %script(src="src/assets/jquery-1.8.3.min.js")
-  %script(src="src/assets/bootstrap/js/bootstrap.min.js")
+  %script(src="/src/assets/jquery-1.8.3.min.js")
+  %script(src="/src/assets/bootstrap/js/bootstrap.min.js")
   %script(src="https://maps.google.com/maps/api/js?sensor=true")
-  %script(src="src/assets/gmaps.js")
-  %script(src="src/assets/app.js")
+  %script(src="/src/assets/gmaps.js")
+  %script(src="/src/assets/app.js")
