Add archive link

--- a/src/index.haml
+++ b/src/index.haml
@@ -104,6 +104,14 @@
               /      解散
 
         %h2
+          過去の開催
+        .archives
+          %ul
+            %li
+              %a(href="/archives/1.html")
+                Rails寺子屋 x kosenconf 第1回
+
+        %h2
           師範(コーチ)
         .masters.clearfix
           .master
