--- a/src/style.scss
+++ b/src/style.scss
@@ -46,6 +46,7 @@ tr:nth-child(odd) td {
 .about,
 .courses,
 .masters,
+.archives,
 .collaborators,
 .faqs {
   padding: 20px 0 20px 20px;
@@ -142,6 +143,15 @@ tr:nth-child(odd) td {
 
   .last {
     min-height: 100px;
+  }
+}
+
+.archives {
+  font-size: 18px;
+
+  ul {
+    list-style: none;
+    margin: 0;
   }
 }
 
