--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ tr:nth-child(odd) td {
 .about,
 .courses,
 .masters,
+.archives,
 .collaborators,
 .faqs {
   padding: 20px 0 20px 20px;
@@ -106,6 +107,12 @@ tr:nth-child(odd) td {
     padding-left: 90px; }
 .masters .last {
   min-height: 100px; }
+
+.archives {
+  font-size: 18px; }
+  .archives ul {
+    list-style: none;
+    margin: 0; }
 
 .collaborators .calligrapher,
 .collaborators .designer {
