--- a/src/index.haml
+++ b/src/index.haml
@@ -38,7 +38,7 @@
             %h4
               日時
             %strong
-              2013/8/3(土)
+              2013/8/3(土) 10:00 開始 (9:30分開場)
             %h4
               参加対象者
             %p
