--- a/src/index.haml
+++ b/src/index.haml
@@ -55,7 +55,7 @@
                 %br
                 %span.address 東京都渋谷区千駄ヶ谷4-23-5 JPR千駄ヶ谷ビル5F
                 %br
-                %span 最寄り駅: JR千駄ヶ谷駅
+                %span 最寄り駅: JR代々木駅
             #map
           .right-box.clearfix
             %h4
