--- a/src/index.haml
+++ b/src/index.haml
@@ -34,6 +34,8 @@
             %a( href="http://kosenconf.jp/" )
               高専カンファレンス
             の合同イベントです。
+          %h3
+            第2回 開催情報
           .left-box
             %h4
               日時
