--- a/src/index.haml
+++ b/src/index.haml
@@ -63,7 +63,9 @@
             %h4
               参加登録
             %p
-              %span 後日連絡します。
+              %a( href="https://docs.google.com/spreadsheet/viewform?formkey=dFByeVRuU2swWllXbTV6RF9SQ3UwaVE6MA#gid=2" target="_blank" )
+                %button.btn.submit-btn
+                  参加登録フォームへ
             %h4
               当日の持ち物
             .equipment
