--- a/src/archives/1.haml
+++ b/src/archives/1.haml
@@ -7,6 +7,9 @@
     %link(href="/src/assets/bootstrap/css/bootstrap.css" rel="stylesheet")
     %link(href="/src/assets/fontawesome/css/font-awesome.css" rel="stylesheet")
     %link(href="/style.css" rel="stylesheet")
+    %script
+      var lat = 35.630424;
+      var lng = 139.745517;
     %meta(property="og:type"        content="website" )
     %meta(property="og:url"         content="http://rails.terakoya.io/" )
     %meta(property="og:title"       content="Rails寺子屋" )
