Add profile, @kitak and @machu

--- a/src/index.haml
+++ b/src/index.haml
@@ -330,7 +330,7 @@
             .description
               クックパッドで働くインフラエンジニア。主に Rails アプリケーションのパフォーマンス改善を担当。技術評論社 WEB+DB PRESS Vol.70に「Rails高速化特集」を書きました。出身高専は豊田高専情報工学科。好きな動物はパンダ。
 
-          .master.last
+          .master
             .icon
               %img( src="https://si0.twimg.com/profile_images/1491871238/kengo05_bigger.png" width="75" class="shadow" )
             .name
@@ -341,6 +341,45 @@
                   %i.icon-twitter
             .description
               北九州高専制御情報工学科卒業。五十嵐さんが講師の講義のティーチングアシスタント。
+
+          .master
+            .icon
+              %img( src="https://si0.twimg.com/profile_images/3340818214/fe393816d22e03b76e576f41829b6195.png" width="75" class="shadow" )
+            .name
+              喜多 啓介 @kitak
+            %ul.clearfix
+              %li
+                %a( href="https://twitter.com/kitak" class="link" )
+                  %i.icon-twitter
+              %li
+                %a( href="https://www.facebook.com/kei.kita2501" class="link" )
+                  %i.icon-facebook
+              %li
+                %a( href="https://github.con/kitak" class="link" )
+                  %i.icon-github
+            .description
+              石川高専電子情報工学科、同高専専攻科電子機械工学専攻を卒業。
+              今年の4月から、株式会社paperboy&co.の新卒氏。
+              技術基盤の軍曹たちによるブートキャンプに悲鳴を上げながら毎日を楽しく過ごしている。
+              ペパボ1,2を争う眼光の鋭いお兄さんだが、実際はのほほんとしている。
+
+          .master.last
+            .icon
+              %img( src="https://si0.twimg.com/profile_images/16229292/face.jpg" width="75" class="shadow" )
+            .name
+              松岡 浩平 @machu
+            %ul.clearfix
+              %li
+                %a( href="https://twitter.com/machu" class="link" )
+                  %i.icon-twitter
+              %li
+                %a( href="https://github.con/machu" class="link" )
+                  %i.icon-github
+              %li
+                %a( href="http://www.machu.jp/diary/" class="link" )
+                  %i.icon-home
+            .description
+              tDiaryコミッタ。Rubyの簡潔さと奥深さに魅せられて早10年。ブログ「まちゅダイアリー」や雑誌「日経ソフトウエア」、「WEB+DBPRESS」にセキュリティや技術ネタを掲載。2児の父になり、昼は家族とプラレールのコース作成、深夜は1人でひっそりプログラミング。いつか子どもとペアプロするのが夢。久留米高専、制御情報工学科卒。
 
         %h2
           助っ人
