--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -17,11 +17,11 @@
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
 
     %title= "Rails寺子屋第2回"
-    %link(href="css/normalize.css" rel="stylesheet")
-    %link(href="css/main.css" rel="stylesheet")
-    %link(href="css/bootstrap.css" rel="stylesheet")
-    %link(href="css/font-awesome.css" rel="stylesheet")
-    %link(href="css/style.css" rel="stylesheet")
+    %link(href="/css/normalize.css" rel="stylesheet")
+    %link(href="/css/main.css" rel="stylesheet")
+    %link(href="/css/bootstrap.css" rel="stylesheet")
+    %link(href="/css/font-awesome.css" rel="stylesheet")
+    %link(href="/css/style.css" rel="stylesheet")
 
     %script{:src => "js/vendor/modernizr-2.6.1.min.js"}
   %body
@@ -29,7 +29,7 @@
     %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"}
     :javascript
       window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')
-  %script(src="js/vendor/jquery-1.8.0.min.js")
+  %script(src="/js/vendor/jquery-1.8.0.min.js")
   %script(src="https://maps.google.com/maps/api/js?sensor=true")
-  %script(src="js/gmaps.js")
-  %script(src="js/app.js")
+  %script(src="/js/gmaps.js")
+  %script(src="/js/app.js")
