Fix broken link

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -95,7 +95,7 @@
     .archives
       %ul
         %li
-          %a(href="/archives/1.html")
+          %a(href="/archives/1")
             Rails寺子屋 x kosenconf 第1回
 
     %h2
