--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -113,17 +113,17 @@
           %ul.clearfix
             - unless master['twitter'].nil?
               %li
-                %a( href="http://twitter.com/#{master['twitter']}" class="link" )
+                %a( href="https://twitter.com/#{master['twitter']}" class="link" )
                   %i.icon-twitter
 
             - unless master['facebook'].nil?
               %li
-                %a( href="http://facebook.com/#{master['facebook']}" class="link" )
+                %a( href="https://facebook.com/#{master['facebook']}" class="link" )
                   %i.icon-facebook
 
             - unless master['github'].nil?
               %li
-                %a( href="http://github.com/#{master['github']}" class="link" )
+                %a( href="https://github.com/#{master['github']}" class="link" )
                   %i.icon-github
             - unless master['web'].nil?
               %li
