Update information of event

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -56,42 +56,42 @@
           当日の持ち物
         .equipment
           %p
-            後日連絡します。
+            お弁当とPCを持参してください。
         %h4
           時間割
         .time-table
           後日連絡します。
-          /%table.table.table-striped
-          /  %tr
-          /    %td
-          /      9:30
-          /    %td
-          /      開場
-          /  %tr
-          /    %td
-          /      10:00 - 12:00
-          /    %td
-          /      環境構築
-          /  %tr
-          /    %td
-          /      12:00 - 13:00
-          /    %td
-          /      ランチ
-          /  %tr
-          /    %td
-          /      13:00 - 17:00
-          /    %td
-          /      ワークショップ
-          /  %tr
-          /    %td
-          /      17:00 - 19:00
-          /    %td
-          /      懇親会
-          /  %tr
-          /    %td
-          /      19:00
-          /    %td
-          /      解散
+          %table.table.table-striped
+            %tr
+              %td
+                9:30
+              %td
+                開場
+            %tr
+              %td
+                10:00 - 12:00
+              %td
+                環境構築 & ワークショップ
+            %tr
+              %td
+                12:00 - 13:00
+              %td
+                ランチ
+            %tr
+              %td
+                13:00 - 17:00
+              %td
+                ワークショップ
+            %tr
+              %td
+                17:00 - 19:00
+              %td
+                懇親会
+            %tr
+              %td
+                19:00
+              %td
+                解散
 
     %h2
       過去の開催
