応募フォームへのリンクを削除

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -46,9 +46,11 @@
         %h4
           参加登録
         %p
-          %a( href="https://docs.google.com/spreadsheet/viewform?formkey=dFByeVRuU2swWllXbTV6RF9SQ3UwaVE6MA#gid=2" target="_blank" )
-            %button.btn.submit-btn
-              参加登録フォームへ
+          参加登録を締めきりました。
+          %br
+          たくさんの応募ありがとうございました!
+          %br
+          応募してくださった方には担当からメールにて連絡させていただいておりますのでご確認ください。
         %h4
           当日の持ち物
         .equipment
