Change image path

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,7 +1,7 @@
 %header
   .container
     %h1.logo
-    %img( src="images/logo.png" )
+    %img( src="/images/logo.png" )
 
 .container
   .content
